--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="/pi_icon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <style>
             @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&display=swap");
         </style>
 
-        <title>Vite + React</title>
+        <title>Sudhanshu Patel</title>
     </head>
     <body>
         <div id="root"></div>
